[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-eventbus"
version = "0.1.0"
description = "Durable event bus and replay log for AI agent platforms"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Yantrikos"}]
keywords = ["event-bus", "event-streaming", "replay", "durable", "openclaw"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
schema = ["jsonschema>=4.0.0"]

[project.urls]
Homepage = "https://github.com/yantrikos/nexus"
Repository = "https://github.com/yantrikos/nexus"

[project.scripts]
nexus = "nexus_engine.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexus_engine*"]
